--- a/index.html
+++ b/index.html
@@ -36,20 +36,22 @@
         }
       }
 
-      // Register Service Worker
+      // Register Service Worker with Relative Scope
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('./serviceWorker.js')
+          // Usa './' para garantir caminho relativo no preview
+          navigator.serviceWorker.register('./serviceWorker.js', { scope: './' })
             .then(reg => console.log('SW registrado!', reg))
-            .catch(err => console.log('SW falhou:', err));
+            .catch(err => {
+               // Silencia erro em ambientes que não suportam SW (como alguns previews)
+               console.log('SW Info:', err.message); 
+            });
         });
       }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
       body { font-family: 'Inter', sans-serif; overscroll-behavior-y: none; }
-      
-      /* PWA Install Button Prompt Styling (Optional if you want a custom prompt later) */
       
       @media print {
         @page { margin: 1cm; size: landscape; }
