--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
     "recharts": "https://aistudiocdn.com/recharts@^2.13.0",
-    "date-fns": "https://aistudiocdn.com/date-fns@^2.30.0"
+    "date-fns": "https://aistudiocdn.com/date-fns@^2.30.0",
+    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.86.0"
   }
 }
 </script>
