--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://fincalcdigital.app/" />
     <meta property="og:title" content="FinCalc Digital - Domine seus Números" />
     <meta property="og:description" content="Pare de perder dinheiro. Calcule o preço ideal e a meta de vendas para o seu negócio digital em segundos." />
-    <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/2910/2910768.png" />
+    <meta property="og:image" content="https://placehold.co/512x512/1C3A5B/ffffff/png?text=$" />
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
     <meta property="og:locale" content="pt_BR" />
@@ -25,12 +25,12 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="FinCalc Digital - Assistente Financeiro" />
     <meta name="twitter:description" content="Simule cenários de lucro e precificação para negócios digitais." />
-    <meta name="twitter:image" content="https://cdn-icons-png.flaticon.com/512/2910/2910768.png" />
+    <meta name="twitter:image" content="https://placehold.co/512x512/1C3A5B/ffffff/png?text=$" />
 
     <!-- PWA Config & Icons -->
     <link rel="manifest" href="./manifest.json" />
-    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/2910/2910768.png" />
-    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/2910/2910768.png" />
+    <link rel="icon" type="image/png" href="https://placehold.co/512x512/1C3A5B/ffffff/png?text=$" />
+    <link rel="apple-touch-icon" href="https://placehold.co/512x512/1C3A5B/ffffff/png?text=$" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="FinCalc" />
