--- a/index.html
+++ b/index.html
@@ -138,13 +138,15 @@
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react": "https://aistudiocdn.com/react@18.3.1",
+    "react/": "https://aistudiocdn.com/react@18.3.1/",
+    "react-dom": "https://aistudiocdn.com/react-dom@18.3.1",
+    "react-dom/": "https://aistudiocdn.com/react-dom@18.3.1/",
+    "react-dom/client": "https://aistudiocdn.com/react-dom@18.3.1/client",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.86.0"
+    "recharts": "https://aistudiocdn.com/recharts@2.12.7?external=react,react-dom",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@0.378.0?external=react",
+    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@2.43.4"
   }
 }
 </script>
